--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -248,11 +248,11 @@
 	    <div data-role="content">
 		<form action="" method="post" id="addItemForm">
 		    <div data-role="fieldcontain">
-			<label for="movieTitle">* Movie Title:</label>
+			<label for="movieTitle">*Movie Title:</label>
 			<input type="text" name="movieTitle" id="movieTitle" placeholder="ex. The Lord Of The Rings"/>
 		    </div>
 		    <div data-role="fieldcontain">
-			<label for="dateSeen">* Date Seen:</label>
+			<label for="dateSeen">*Date Seen:</label>
 			<input type="date" id="dateSeen" name="dateSeen"/>
 		    </div>
 		    <div data-role="fieldcontain">
@@ -269,7 +269,7 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
-			    <legend>Where Seen:</legend>
+			    <legend>Where I Saw The Movie:</legend>
 			    <input type="radio" value="Movie Theater" name="whereseen" id="movietheater"/>
 			    <label for="movietheater">Movie Theater</label>
 			    <input type="radio" value="At Home" name="whereseen" id="athome" />
@@ -277,6 +277,27 @@
 			    <input type="radio" value="Other" name="whereseen" id="other" />
 			    <label for="other">Other</label>
 			</fieldset>
+		    </div>
+		    <div data-role="fieldcontain">
+			<label for="seenwith">Who I Saw It With:</label>
+			<input type="text" name="seenwith" id="seenwith" />
+		    </div>
+		    <div data-role="fieldcontain">
+			<label for="rating">Movie Rating:</label>
+			<input type="range" name="rating" id="rating" value="5" min="0" max="10" />
+		    </div>
+		    <div data-role="fieldcontain">
+			<fieldset data-role="controlgroup">
+			    <input type="checkbox" value="Favorite" name="favorite" id="favorite" />
+			    <label for="favorite">Save As Favorite?</label>
+			</fieldset>
+		    </div>
+		    <div data-role="fieldcontain">
+			<label for="review">*My Review:</label>
+			<textarea></textarea>
+		    </div>
+		    <div data-role="fieldcontain">
+			<input type="submit" value="Save Movie" id="savemovie" />
 		    </div>
 		</form>
 	    </div>
