--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -24,7 +24,7 @@
 	    </header>
 	    <div data-role="content">
 		<div>
-		    <a href="#addItem" data-ajax="false"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
+		    <a href="#addItem"><img id="filmreel" src="images/FilmReel3_03.gif"/></a>
 		</div>
 		<div>
 		<form action="#" method="post" id="searchForm">
@@ -248,12 +248,12 @@
 	    <div data-role="content">
 		<form action="" method="post" id="addItemForm">
 		    <div data-role="fieldcontain">
-			<label for="movieTitle">*Movie Title:</label>
-			<input type="text" name="movieTitle" id="movieTitle" placeholder="ex. The Lord Of The Rings"/>
+			<label for="movietitle">*Movie Title:</label>
+			<input type="text" name="movietitle" id="movietitle" placeholder="ex. The Lord Of The Rings" class="required"/>
 		    </div>
 		    <div data-role="fieldcontain">
-			<label for="dateSeen">*Date Seen:</label>
-			<input type="date" id="dateSeen" name="dateSeen"/>
+			<label for="dateseen">*Date Seen:</label>
+			<input class="required" type="date" id="dateseen" name="dateseen"/>
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="genres">Movie Genre:</label>
@@ -294,7 +294,7 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="review">*My Review:</label>
-			<textarea></textarea>
+			<textarea class="required"></textarea>
 		    </div>
 		    <div data-role="fieldcontain">
 			<input type="submit" value="Save Movie" id="savemovie" />
@@ -315,5 +315,6 @@
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 	<script type="text/javascript" src="js/search.js" data-ajax="false"></script>
+	<script type="text/javascript" src="js/main.js" data-ajax="false"></script>
     </body>
 </html>
