--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -249,17 +249,17 @@
 		<form action="" method="post" id="addItemForm">
 		    <div data-role="fieldcontain">
 			<label for="movietitle">*Movie Title:</label>
-			<input type="text" name="movietitle" id="movietitle" placeholder="ex. The Lord Of The Rings" class="required"/>
+			<input type="text" name="movietitle" id="movietitle" placeholder="ex. The Lord Of The Rings" class="required" />
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="dateseen">*Date Seen:</label>
 			<input class="required" type="date" id="dateseen" name="dateseen"/>
 		    </div>
 		    <div data-role="fieldcontain">
-			<label for="genres">Movie Genre:</label>
-			<select name="genres" id="genres">
-			    <option data-placeholder="true">Please Select A Genre</option>
-			    <option value="comedy">Comedy</option>
+			<label for="genre">Movie Genre:</label>
+			<select name="genre" id="genre">
+			    <option data-placeholder="true" value>Please Select A Genre</option>
+			    <option value="Comedy">Comedy</option>
 			    <option value="Drama">Drama</option>
 			    <option value="Romance">Romance</option>
 			    <option value="Horror">Horror</option>
@@ -269,12 +269,12 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<fieldset data-role="controlgroup">
-			    <legend>Where I Saw The Movie:</legend>
-			    <input type="radio" value="Movie Theater" name="whereseen" id="movietheater"/>
+			    <legend id="where">Where I Saw The Movie:</legend>
+			    <input type="radio" value="Movie Theater" name="where" id="movietheater"/>
 			    <label for="movietheater">Movie Theater</label>
-			    <input type="radio" value="At Home" name="whereseen" id="athome" />
+			    <input type="radio" value="At Home" name="where" id="athome" />
 			    <label for="athome">At Home</label>
-			    <input type="radio" value="Other" name="whereseen" id="other" />
+			    <input type="radio" value="Other" name="where" id="other" />
 			    <label for="other">Other</label>
 			</fieldset>
 		    </div>
@@ -294,11 +294,13 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="review">*My Review:</label>
-			<textarea class="required"></textarea>
+			<textarea id="review" class="required"></textarea>
 		    </div>
 		    <div data-role="fieldcontain">
 			<input type="submit" value="Save Movie" id="savemovie" />
 		    </div>
+		    <a href="#" id="clearData" data-ajax="false">Clear Stored Data</a>
+            <a href="#" id="displayData" data-ajax="false">Display Data</a>
 		</form>
 	    </div>
 	    <div data-role="footer" data-id="navbar" data-position="fixed" data-theme="a">
