--- a/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_3/Antonio_Ariana_GoldApp/index.html
@@ -249,7 +249,7 @@
 		<form action="" method="post" id="addItemForm">
 		    <div data-role="fieldcontain">
 			<label for="movietitle">*Movie Title:</label>
-			<input type="text" name="movietitle" id="movietitle" placeholder="ex. The Lord Of The Rings" class="required" />
+			<input data-clear-btn="true" type="text" name="movietitle" id="movietitle" placeholder="ex. The Lord Of The Rings" class="required" />
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="dateseen">*Date Seen:</label>
@@ -280,7 +280,7 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="seenwith">Who I Saw It With:</label>
-			<input type="text" name="seenwith" id="seenwith" />
+			<input data-clear-btn="true" type="text" name="seenwith" id="seenwith" />
 		    </div>
 		    <div data-role="fieldcontain" >
 			<label for="rating">Movie Rating:</label>
@@ -294,7 +294,8 @@
 		    </div>
 		    <div data-role="fieldcontain">
 			<label for="review">*My Review:</label>
-			<textarea id="review" class="required"></textarea>
+			<textarea  id="review" class="required"></textarea>
+			
 		    </div>
 		    <div data-role="fieldcontain">
 			<input type="submit" value="Save Movie" id="savemovie" />
@@ -316,7 +317,6 @@
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
-	<!--<script type="text/javascript" src="js/search.js" data-ajax="false"></script>-->
 	<script type="text/javascript" src="js/json.js"></script>
 	<script type="text/javascript" src="js/main.js" data-ajax="false"></script>
     </body>
