--- a/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
+++ b/MIU/Week_4/Antonio_Ariana_GoldApp/index.html
@@ -18,7 +18,7 @@
 	<script src="js/libs/modernizr.custom.min.js"></script>
 	<title>My Hollywood</title>
     </head>
-    <body>
+    <body id=backgroundimage>
 	<div data-role="page" id="home" data-theme="c">
 	    <header data-theme="b"><div data-theme="b"><img src="images/header1_03.gif" id="headerImg" data-theme="b"></div>
 	    </header>
